--- a/discography.html
+++ b/discography.html
@@ -23,15 +23,15 @@
 
 	<main>
 		<p>Some of The Jazz at Lincoln Center Orchestra's most renowned and enjoyed albums<br>
-			<img src = "/images/rockchalksuite.png" width="25" alt = ""/>
-			<img src = "/images/blackbrownbeige.jpg" width="25" alt = ""/>
-			<img src = "/images/wayneshorter.png" width="25" alt = ""/>
-			<img src = "/images/bbh.jpg" width="25" alt = ""/>
-			<img src = "/images/bbh2.jpg" width="25" alt = ""/>
-			<img src = "/images/jazzforkids.jpg" width="25" alt = ""/>
-			<img src = "/images/swingsymphony.jpg" width="25" alt = ""/>
-			<img src = "/images/liveincuba.jpg" width="25" alt = ""/>
-			<img src = "/images/unanoche.jpg" width="25" alt = ""/>
+			<img src = "./images/rockchalksuite.png" width="25" alt = "Rock Chalk Suite album cover"/>
+			<img src = "./images/blackbrownbeige.jpg" width="25" alt = "Black, Brown, and Beige album cover"/>
+			<img src = "./images/wayneshorter.png" width="25" alt = "The Music of Wayne Shorter album cover"/>
+			<img src = "./images/bbh.jpg" width="25" alt = "Big Band Holidays album cover"/>
+			<img src = "./images/bbh2.jpg" width="25" alt = "Big Band Holidays II album cover"/>
+			<img src = "./images/jazzforkids.jpg" width="25" alt = "Jazz For Kids album cover"/>
+			<img src = "./images/swingsymphony.jpg" width="25" alt = "Swing Symphony album cover"/>
+			<img src = "./images/liveincuba.jpg" width="25" alt = "Live in Cuba album cover"/>
+			<img src = "./images/unanoche.jpg" width="25" alt = "Una Noche con Rubén Blades album cover"/>
 
 	</main>
 
