--- a/personnel.html
+++ b/personnel.html
@@ -23,22 +23,22 @@
 
 	<main>
 	<p>The Jazz at Lincoln Center Orchestra, led by Wynton Marsalis, is made up of 16 of the finest soloists, ensemble players, and arrangers in jazz music today.<br>
-		<img src = "/images/wynton.jpg" width="25" alt = "Wynton Marsalis playing the trumpet"/>
-		<img src = "/images/ryan.jpg" width="25" alt = "Ryan Kisor playing the trumpet"/>
-		<img src = "/images/marcus.jpg" width="25" alt = "Marcus Printup playing the trumpet"/>
-		<img src = "/images/kenny.jpg" width="25" alt = "Kenny Rampton playing the trumpet"/>
-		<img src = "/images/chris.jpg" width="25" alt = "Chris Crenshaw playing the trombone"/>
-		<img src = "/images/vincent.jpg" width="25" alt = "Vincent Gardner playing the trombone"/>
-		<img src = "/images/elliot.jpg" width="25" alt = "Elliot Mason playing the trombone"/>
-		<img src = "/images/robert.jpg" width="25" alt = "Robert Stewart playing the saxophone"/>
-		<img src = "/images/walter.jpg" width="25" alt = "Walter Blanding playing the saxophone"/>
-		<img src = "/images/victor.jpg" width="25" alt = "Victor Goines playing the saxophone"/>
-		<img src = "/images/sherman.jpg" width="25" alt = "Sherman Irby plaing the saxophone"/>
-		<img src = "/images/ted.jpg" width="25" alt = "Ted Nash playing the saxophone"/>
-		<img src = "/images/paul.jpg" width="25" alt = "Paul Nedzela playing the saxophone"/>
-		<img src = "/images/dan.jpg" width="25" alt = "Dan Nimmer playing the piano"/>
-		<img src = "/images/carlos.jpg" width="25" alt = "Carlos Henriquez playing the bass"/>
-		<img src = "/images/obed.jpg" width="25" alt = "Obed Calvaire playing the drums"/>
+		<img src = "./images/wynton.jpg" width="25" alt = "Wynton Marsalis playing the trumpet"/>
+		<img src = "./images/ryan.jpg" width="25" alt = "Ryan Kisor playing the trumpet"/>
+		<img src = "./images/marcus.jpg" width="25" alt = "Marcus Printup playing the trumpet"/>
+		<img src = "./images/kenny.jpg" width="25" alt = "Kenny Rampton playing the trumpet"/>
+		<img src = "./images/chris.jpg" width="25" alt = "Chris Crenshaw playing the trombone"/>
+		<img src = "./images/vincent.jpg" width="25" alt = "Vincent Gardner playing the trombone"/>
+		<img src = "./images/elliot.jpg" width="25" alt = "Elliot Mason playing the trombone"/>
+		<img src = "./images/robert.jpg" width="25" alt = "Robert Stewart playing the saxophone"/>
+		<img src = "./images/walter.jpg" width="25" alt = "Walter Blanding playing the saxophone"/>
+		<img src = "./images/victor.jpg" width="25" alt = "Victor Goines playing the saxophone"/>
+		<img src = "./images/sherman.jpg" width="25" alt = "Sherman Irby plaing the saxophone"/>
+		<img src = "./images/ted.jpg" width="25" alt = "Ted Nash playing the saxophone"/>
+		<img src = "./images/paul.jpg" width="25" alt = "Paul Nedzela playing the saxophone"/>
+		<img src = "./images/dan.jpg" width="25" alt = "Dan Nimmer playing the piano"/>
+		<img src = "./images/carlos.jpg" width="25" alt = "Carlos Henriquez playing the bass"/>
+		<img src = "./images/obed.jpg" width="25" alt = "Obed Calvaire playing the drums"/>
 	</main>
 
 	<footer>
