--- a/discography.html
+++ b/discography.html
@@ -8,8 +8,8 @@
 	<title>Discography</title>
 </head>
 <body>
+	<a class="skip" href="#skip">Skip to Main Content</a></div>
 	<header>
-		<div class="skip"><a href="#main">Skip to Main Content</a></div>
 		<nav>
 			<ul>
 				<li><a href = "index.html" >Home</a></li>
@@ -21,9 +21,10 @@
 		<h1>Discography of the Jazz at Lincoln Center Orchestra</h1>
 	</header>
 
-	<main>
+	<main id="skip">
 		<p>Some of The Jazz at Lincoln Center Orchestra's most renowned and enjoyed albums<br>
 			<img src = "./images/rockchalksuite.png" width="25" alt = "Rock Chalk Suite album cover"/>
+			<p>Rock Chalk Suite album cover</p>
 			<img src = "./images/blackbrownbeige.jpg" width="25" alt = "Black, Brown, and Beige album cover"/>
 			<img src = "./images/wayneshorter.png" width="25" alt = "The Music of Wayne Shorter album cover"/>
 			<img src = "./images/bbh.jpg" width="25" alt = "Big Band Holidays album cover"/>
