--- a/history.html
+++ b/history.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
+	<a class="skip" href="#skip">Skip to Main Content</a>
 	<header>
-        <div class="skip"><a href="#main">Skip to Main Content</a></div>
 		<nav>
 			<ul>
 				<li><a href = "index.html" >Home</a></li>
@@ -22,7 +22,7 @@
 		<h1>History of the Jazz at Lincoln Center Orchestra</h1>
 	</header>
 
-	<main>
+	<main id ="skip">
 		<p>In 1988 the Orchestra was formed as an outgrowth of its concert series, Classical Jazz, with David Berger conducting. When Wynton Marsalis became artistic director in 1991, he emphasized the history of jazz, particularly Duke Ellington. The first album was Portraits by Ellington (1992), and seven years later the Ellington centennial was honored with the album Live in Swing City: Swingin' with the Duke (1999).</p>
         <p>Under the leadership of Marsalis, the band performs at its home in Lincoln Center, tours throughout the U.S. and abroad, visits schools, appears on television, and performs with symphony orchestras. The Orchestra backed Wynton Marsalis on his album Blood on the Fields, which won the Pulitzer Prize.</p>
         <p>Since 2015, the Orchestra's albums have been issued on its own label, Blue Engine Records.</p>
