--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
+	<a class="skip" href="#skip">Skip to Main Content</a>
 	<header>
-		<div class="skip"><a href="#main">Skip to Main Content</a></div>
 		<nav>
 			<ul>
 				<li class="active"><a href = "index.html" >Home</a></li>
@@ -22,7 +22,10 @@
 		<h1>History of the Jazz at Lincoln Center Orchestra</h1>
 	</header>
 
-	<main>
+	<main id="skip">
+		
+
+
 		<p>I am a Lecturer IV in the School of Information at the 
 			University of Michigan. I focus on the introductory 
 			programming courses such as Data-Oriented Programming 
