--- a/personnel.html
+++ b/personnel.html
@@ -8,8 +8,8 @@
 	<title>Personnel</title>
 </head>
 <body>
+	<a class="skip" href="#skip">Skip to Main Content</a></div>
 	<header>
-		<div class="skip"><a href="#main">Skip to Main Content</a></div>
 		<nav>
 			<ul>
 				<li><a href = "index.html" >Home</a></li>
@@ -21,7 +21,7 @@
 		<h1>Jazz at Lincoln Center Orchestra Personnel</h1>
 	</header>
 
-	<main>
+	<main id="skip">
 	<p>The Jazz at Lincoln Center Orchestra, led by Wynton Marsalis, is made up of 16 of the finest soloists, ensemble players, and arrangers in jazz music today.<br>
 		<img src = "./images/wynton.jpg" width="25" alt = "Wynton Marsalis playing the trumpet"/>
 		<img src = "./images/ryan.jpg" width="25" alt = "Ryan Kisor playing the trumpet"/>
