--- a/discography.html
+++ b/discography.html
@@ -8,7 +8,7 @@
 	<title>Discography</title>
 </head>
 <body>
-	<a class="skip" href="#skip">Skip to Main Content</a></div>
+	<div class="skip"><a class="skip" href="#skip">Skip to Main Content</a></div>
 	<header>
 		<nav>
 			<ul>
@@ -18,22 +18,85 @@
 				<li><a href = "history.html">History</a></li>
 			</ul>
 		</nav>
-		<h1>Discography of the Jazz at Lincoln Center Orchestra</h1>
+		<h1>Discography of the Jazz at Lincoln Center Orchestra</h1><br>
 	</header>
 
 	<main id="skip">
-		<p>Some of The Jazz at Lincoln Center Orchestra's most renowned and enjoyed albums<br>
-			<img src = "./images/rockchalksuite.png" width="25" alt = "Rock Chalk Suite album cover"/>
-			<p>Rock Chalk Suite album cover</p>
-			<img src = "./images/blackbrownbeige.jpg" width="25" alt = "Black, Brown, and Beige album cover"/>
-			<img src = "./images/wayneshorter.png" width="25" alt = "The Music of Wayne Shorter album cover"/>
-			<img src = "./images/bbh.jpg" width="25" alt = "Big Band Holidays album cover"/>
-			<img src = "./images/bbh2.jpg" width="25" alt = "Big Band Holidays II album cover"/>
-			<img src = "./images/jazzforkids.jpg" width="25" alt = "Jazz For Kids album cover"/>
-			<img src = "./images/swingsymphony.jpg" width="25" alt = "Swing Symphony album cover"/>
-			<img src = "./images/liveincuba.jpg" width="25" alt = "Live in Cuba album cover"/>
-			<img src = "./images/unanoche.jpg" width="25" alt = "Una Noche con Rubén Blades album cover"/>
-
+		<h2>Jazz at Lincoln Center Orchestra's most renowned and enjoyed albums</h2><br>
+		<div class = "discography">
+			<div class = "album">
+				<h3>Rock Chalk Suite</h3>
+				<div class = "date">
+					<p> RELEASED 2020</p>
+				</div>
+				<img src = "./images/rockchalksuite.png" width="25" alt = "Rock Chalk Suite album cover"/>
+				<p>Written and recorded by the musicians of the Jazz at Lincoln Center Orchestra with Wynton Marsalis, each of the Rock Chalk Suite's high-flying 15 movements takes inspiration from a different University of Kansas hoops legend.</p>
+			</div>
+			<div class = "album">
+				<h3>Black, Brown, and Beige</h3>
+				<div class = "date">
+					<p> RELEASED 2020</p>
+				</div>
+				<img src = "./images/blackbrownbeige.jpg" width="25" alt = "Black, Brown, and Beige album cover"/>
+				<p>Captured during a live, Rose Theater performance in 2018, the JLCO’s spirited take on Ellington’s epic not only pays tribute to some of the maestro’s most personal work but adds another important chapter to its enduring legacy.</p>
+			</div>
+			<div class = "album">
+				<h3>The Music of Wayne Shorter</h3>	
+				<div class = "date">
+					<p> RELEASED 2020</p>
+				</div>
+				<img src = "./images/wayneshorter.png" width="25" alt = "The Music of Wayne Shorter album cover"/>
+				<p>In 2015, accomplished musician Wayne Shorter joined the Jazz at Lincoln Center Orchestra with Wynton Marsalis onstage for three unforgettable nights; the result is The Music of Wayne Shorter.</p>
+			</div>
+			<div class = "album">
+				<h3>Big Band Holidays</h3>
+				<div class = "date">
+					<p> RELEASED 2015</p>
+				</div>
+				<img src = "./images/bbh.jpg" width="25" alt = "Big Band Holidays album cover"/>
+				<p>Jazz at Lincoln Center’s Blue Engine Records celebrates the most wonderful time of the year with the release of Big Band Holidays, a compilation of holiday classics performed live by the world-renowned Jazz at Lincoln Center Orchestra with Wynton Marsalis.</p>
+			</div>
+			<div class = "album">
+				<h3>Big Band Holidays II</h3>
+				<div class = "date">
+					<p> RELEASED 2019</p>
+				</div>
+				<img src = "./images/bbh2.jpg" width="25" alt = "Big Band Holidays II album cover"/>
+				<p>Swing into the holiday spirit with Big Band Holidays II, the sequel to the critically acclaimed 2015 release from the Jazz at Lincoln Center Orchestra with Wynton Marsalis.</p>
+			</div>
+			<div class = "album">
+				<h3>Jazz For Kids</h3>
+				<div class = "date">
+					<p> RELEASED 2019</p>
+				</div>
+				<img src = "./images/jazzforkids.jpg" width="25" alt = "Jazz For Kids album cover"/>
+				<p>Childhood favorites get the big band treatment on Jazz for Kids with a playful reimagining by the Jazz at Lincoln Center Orchestra with Wynton Marsalis.</p>
+			</div>
+			<div class = "album">
+				<h3>Swing Symphony</h3>
+				<div class = "date">
+					<p> RELEASED 2019</p>
+				</div>
+				<img src = "./images/swingsymphony.jpg" width="25" alt = "Swing Symphony album cover"/>
+				<p>This recording of Wynton Marsalis' Swing Symphony, which took place in front of a rapturous, sold-out crowd in St. Louis’s Powell Hall, marks the very first release of a modern classic that captures the full breadth of 20th-century orchestral music and the spirit of American optimism.</p>
+			</div>
+			<div class = "album">
+				<h3>Live in Cuba</h3>
+				<div class = "date">
+					<p> RELEASED 2015</p>
+				</div>
+				<img src = "./images/liveincuba.jpg" width="25" alt = "Live in Cuba album cover"/>
+				<p>Recorded in front of a clamorous, sold-out crowd at Havana’s Mella Theatre in October 2010, Live in Cuba captures the Jazz at Lincoln Center Orchestra's unforgettable tracing of the connections between American jazz and Afro-Cuban music.</p>
+			</div>
+			<div class = "album">
+				<h3>Una Noche con Rubén Blades</h3>
+				<div class = "date">
+					<p> RELEASED 2018</p>
+				</div>
+				<img src = "./images/unanoche.jpg" width="25" alt = "Una Noche con Rubén Blades album cover"/>
+				<p>Una Noche con Rubén Blades finds the Maestro singing some of his own beloved compositions, including “Pedro Navaja,” “Patria,” and “El Cantante,” as well as swinging through standards like “Too Close for Comfort” and “Begin the Beguine,” all while backed by the Downbeat Reader’s Poll Big Band of the Year (2013, ‘14. & ‘15).</p>
+			</div>
+		</div>
 	</main>
 
 	<footer>
