--- a/history.html
+++ b/history.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<a class="skip" href="#skip">Skip to Main Content</a>
+	<div class="skip"><a class="skip" href="#skip">Skip to Main Content</a></div>
 	<header>
 		<nav>
 			<ul>
@@ -19,17 +19,34 @@
 				<li class="active"><a href = "history.html">History</a></li>
 			</ul>
 		</nav>
-		<h1>History of the Jazz at Lincoln Center Orchestra</h1>
+		<h1>History of the Jazz at Lincoln Center Orchestra</h1><br>
 	</header>
 
 	<main id ="skip">
-		<p>In 1988 the Orchestra was formed as an outgrowth of its concert series, Classical Jazz, with David Berger conducting. When Wynton Marsalis became artistic director in 1991, he emphasized the history of jazz, particularly Duke Ellington. The first album was Portraits by Ellington (1992), and seven years later the Ellington centennial was honored with the album Live in Swing City: Swingin' with the Duke (1999).</p>
-        <p>Under the leadership of Marsalis, the band performs at its home in Lincoln Center, tours throughout the U.S. and abroad, visits schools, appears on television, and performs with symphony orchestras. The Orchestra backed Wynton Marsalis on his album Blood on the Fields, which won the Pulitzer Prize.</p>
-        <p>Since 2015, the Orchestra's albums have been issued on its own label, Blue Engine Records.</p>
+		<p>In 1988 the Orchestra was formed as an outgrowth of its concert series, Classical Jazz, with David Berger conducting. When Wynton Marsalis became artistic director in 1991, he emphasized the history of jazz, particularly Duke Ellington. The first album was Portraits by Ellington (1992), and seven years later the Ellington centennial was honored with the album Live in Swing City: Swingin' with the Duke (1999). Under the leadership of Marsalis, the band performs at its home in Lincoln Center, tours throughout the U.S. and abroad, visits schools, appears on television, and performs with symphony orchestras. The Orchestra backed Wynton Marsalis on his album Blood on the Fields, which won the Pulitzer Prize. Since 2015, the Orchestra's albums have been issued on its own label, Blue Engine Records. </p>
+		<br>
+		<h2>Mission Statement</h2><br>
+		<h3 id = "indexh3">In the Spirit of Swing.</h3><br>
+		<p>The mission of Jazz at Lincoln Center is to entertain, enrich and expand a global community for jazz through performance, education, and advocacy. We believe jazz is a metaphor for Democracy. Because jazz is improvisational, it celebrates personal freedom and encourages individual expression. Because jazz is swinging, it dedicates that freedom to finding and maintaining common ground with others. Because jazz is rooted in the blues, it inspires us to face adversity with persistent optimism.</p><br>
+
+		<video controls="" poster="https://jazz.org/lwdcms/image-view.php?module=media_library&amp;module_id=13379&amp;image_name=image_featured&amp;option=width&amp;width=9999&amp;height=9999&amp;r=0&amp;g=0&amp;b=0&amp;quality=90&amp;use_original=0" width="560" height="315"><source src="https://s3.amazonaws.com/jalc.vid_conversions/qdHEcrmoVb_high.mp4" type="video/mp4">&nbsp;Your browser does not support the video tag.</video><br>
+		<button onclick="myFunction()">Transcript</button>
+		<br>
+		<p id="demo"></p><br>
+		<p id="demo1"></p><br>
+		<p id="demo2"></p><br>
+		<p id="demo3"></p><br>
+		<p id="demo4"></p><br>
+		<p id="demo5"></p><br>
+		<p id="demo6"></p><br>
+		<p id="demo7"></p><br>
+		<p id="demo8"></p>
+
 	</main>
 
 	<footer>
 		<p>Brogan Kaczkofsky &copy; 2022</p>
 	</footer>
+	<script src="js/button.js"></script>
 </body>
 </html>
