--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<a class="skip" href="#skip">Skip to Main Content</a>
+	<div class="skip"><a class="skip" href="#skip">Skip to Main Content</a></div>
 	<header>
 		<nav>
 			<ul>
@@ -19,28 +19,13 @@
 				<li><a href = "history.html">History</a></li>
 			</ul>
 		</nav>
-		<h1>History of the Jazz at Lincoln Center Orchestra</h1>
+		<h1>The Jazz at Lincoln Center Orchestra</h1><br>
 	</header>
 
 	<main id="skip">
-		
-
-
-		<p>I am a Lecturer IV in the School of Information at the 
-			University of Michigan. I focus on the introductory 
-			programming courses such as Data-Oriented Programming 
-			(SI 206) and the Web Design Courses (SI 339 and SI 539).</p>
-
-		<p>
-			I received my BS from <a href = "http://www.kent.edu">Kent State 
-			University</a> Honors College in Computer Science, and an MS 
-			and PhD from the University of Pittsburgh, also in Computer 
-			Science. My thesis was on Artificial Intelligence applications on 
-			the Nursebot Project, a robotic assistant for the elderly.</p>
-		<p>My previous jobs include Associate Professor at 
-			<a href = "http://www.csulb.edu">California State University</a> 
-			and positions at NASA JPL, the Naval Research Lab, and the NSA. 
-		</p>
+		<h2>The Jazz at Lincoln Center Orchestra is an American big band and jazz orchestra led by Wynton Marsalis. The Orchestra is part of Jazz at Lincoln Center, a performing arts organization in New York City.</h2><br>
+		<h3 id = "indexh3">Announcing Jazz at Lincoln Center's 2022-23 Season</h3><br>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/uW1bSnJMryI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</main>
 	<footer>
 		<p>Brogan Kaczkofsky &copy; 2022</p>
