--- a/personnel.html
+++ b/personnel.html
@@ -8,7 +8,7 @@
 	<title>Personnel</title>
 </head>
 <body>
-	<a class="skip" href="#skip">Skip to Main Content</a></div>
+	<div class="skip"><a class="skip" href="#skip">Skip to Main Content</a></div>
 	<header>
 		<nav>
 			<ul>
@@ -18,27 +18,139 @@
 				<li><a href = "history.html">History</a></li>
 			</ul>
 		</nav>
-		<h1>Jazz at Lincoln Center Orchestra Personnel</h1>
+		<h1>Jazz at Lincoln Center Orchestra Personnel</h1><br>
 	</header>
 
 	<main id="skip">
-	<p>The Jazz at Lincoln Center Orchestra, led by Wynton Marsalis, is made up of 16 of the finest soloists, ensemble players, and arrangers in jazz music today.<br>
-		<img src = "./images/wynton.jpg" width="25" alt = "Wynton Marsalis playing the trumpet"/>
-		<img src = "./images/ryan.jpg" width="25" alt = "Ryan Kisor playing the trumpet"/>
-		<img src = "./images/marcus.jpg" width="25" alt = "Marcus Printup playing the trumpet"/>
-		<img src = "./images/kenny.jpg" width="25" alt = "Kenny Rampton playing the trumpet"/>
-		<img src = "./images/chris.jpg" width="25" alt = "Chris Crenshaw playing the trombone"/>
-		<img src = "./images/vincent.jpg" width="25" alt = "Vincent Gardner playing the trombone"/>
-		<img src = "./images/elliot.jpg" width="25" alt = "Elliot Mason playing the trombone"/>
-		<img src = "./images/robert.jpg" width="25" alt = "Robert Stewart playing the saxophone"/>
-		<img src = "./images/walter.jpg" width="25" alt = "Walter Blanding playing the saxophone"/>
-		<img src = "./images/victor.jpg" width="25" alt = "Victor Goines playing the saxophone"/>
-		<img src = "./images/sherman.jpg" width="25" alt = "Sherman Irby plaing the saxophone"/>
-		<img src = "./images/ted.jpg" width="25" alt = "Ted Nash playing the saxophone"/>
-		<img src = "./images/paul.jpg" width="25" alt = "Paul Nedzela playing the saxophone"/>
-		<img src = "./images/dan.jpg" width="25" alt = "Dan Nimmer playing the piano"/>
-		<img src = "./images/carlos.jpg" width="25" alt = "Carlos Henriquez playing the bass"/>
-		<img src = "./images/obed.jpg" width="25" alt = "Obed Calvaire playing the drums"/>
+	<h2>The Jazz at Lincoln Center Orchestra, led by Wynton Marsalis, is made up of 16 of the finest soloists, ensemble players, and arrangers in jazz music today.</h2><br>
+	<div class = "personnel">
+		<div class = "person">
+			<h3>Wynton Marsalis</h3>
+			<p class = "position">Artistic Director, Founding Member</p>
+			<img src = "./images/wynton.jpg" width="25" alt = "Wynton Marsalis playing the trumpet"/>
+			<h4>Instrument: </h4> <p>Trumpet</p>
+			<br>
+			<h4>Hometown: </h4> <p>New Orleans, Louisiana</p>
+			</div>
+		<div class = "person">
+			<h3>Ryan Kisor</h3>
+			<p class = "position">Member</p>
+			<img src = "./images/ryan.jpg" width="25" alt = "Ryan Kisor playing the trumpet"/>
+			<h4>Instrument: </h4> <p>Trumpet</p>
+			<br>
+			<h4>Hometown: </h4> <p>Sioux City, Iowa</p>
+		</div>
+		<div class = "person">
+			<h3>Marcus Printup</h3>
+			<p class = "position">Member</p>
+			<img src = "./images/marcus.jpg" width="25" alt = "Marcus Printup playing the trumpet"/>
+			<h4>Instrument: </h4> <p>Trumpet</p>
+			<br>
+			<h4>Hometown: </h4> <p>Conyers, Georgia</p>
+		</div>
+		<div class = "person">
+			<h3>Kenny Rampton</h3>
+			<p class = "position">Member</p>
+			<img src = "./images/kenny.jpg" width="25" alt = "Kenny Rampton playing the trumpet"/>
+			<h4>Instrument: </h4> <p>Trumpet</p>
+			<br>
+			<h4>Hometown: </h4> <p>Las Vegas, Nevada</p>
+		</div>
+		<div class = "person">
+			<h3>Chris Crenshaw</h3>
+			<p class = "position">Member</p>
+			<img src = "./images/chris.jpg" width="25" alt = "Chris Crenshaw playing the trombone"/>
+			<h4>Instrument: </h4> <p>Trombone</p>
+			<br>
+			<h4>Hometown: </h4> <p>Thomson, Georgia</p>
+		</div>
+		<div class = "person">
+			<h3>Vincent Gardner</h3>
+			<p class = "position">Member</p>
+			<img src = "./images/vincent.jpg" width="25" alt = "Vincent Gardner playing the trombone"/>
+			<h4>Instrument: </h4> <p>Trombone</p>
+			<br>
+			<h4>Hometown: </h4> <p>Chicago, Illinois</p>
+		</div>
+		<div class = "person">
+			<h3>Elliot Mason</h3>
+			<p class = "position">Member</p>
+			<img src = "./images/elliot.jpg" width="25" alt = "Elliot Mason playing the trombone"/>
+			<h4>Instrument: </h4> <p>Trombone</p>
+			<br>
+			<h4>Hometown: </h4> <p>Norwich, England</p>
+		</div>
+		<div class = "person">
+			<h3>Robert Stewart</h3>
+			<p class = "position">Member</p>
+			<img src = "./images/robert.jpg" width="25" alt = "Robert Stewart playing the saxophone"/>
+			<h4>Instrument: </h4> <p>Saxophone</p>
+			<br>
+			<h4>Hometown: </h4> <p>Oakland, California</p>
+		</div>
+		<div class = "person">
+			<h3>Walter Blanding</h3>
+			<p class = "position">Member</p>
+			<img src = "./images/walter.jpg" width="25" alt = "Walter Blanding playing the saxophone"/>
+			<h4>Instrument: </h4> <p>Saxophone</p>
+			<br>
+			<h4>Hometown: </h4> <p>Cleveland, Ohio</p>
+		</div>
+		<div class = "person">
+			<h3>Victor Goines</h3>
+			<p class = "position">Member</p>
+			<img src = "./images/victor.jpg" width="25" alt = "Victor Goines playing the saxophone"/>
+			<h4>Instrument: </h4> <p>Saxophone</p>
+			<br>
+			<h4>Hometown: </h4> <p>New Orleans, Louisiana</p>
+		</div>
+		<div class = "person">
+			<h3>Sherman Irby</h3>
+			<p class = "position">Member</p>
+			<img src = "./images/sherman.jpg" width="25" alt = "Sherman Irby plaing the saxophone"/>
+			<h4>Instrument: </h4> <p>Saxophone</p>
+			<br>
+			<h4>Hometown: </h4> <p>Tuscaloosa, Alabama</p>
+		</div>
+		<div class = "person">
+			<h3>Ted Nash</h3>
+			<p class = "position">Member</p>
+			<img src = "./images/ted.jpg" width="25" alt = "Ted Nash playing the saxophone"/>
+			<h4>Instrument: </h4> <p>Saxophone</p>
+			<br>
+			<h4>Hometown: </h4> <p>Los Angeles, California</p>
+		</div>
+		<div class = "person">
+			<h3>Paul Nedzela</h3>
+			<p class = "position">Member</p>
+			<img src = "./images/paul.jpg" width="25" alt = "Paul Nedzela playing the saxophone"/>
+			<h4>Instrument: </h4> <p>Baritone Saxophone</p>
+			<br>
+			<h4>Hometown: </h4> <p>New York, New York</p>
+		</div>
+		<div class = "person">
+			<h3>Dan Nimmer</h3>
+			<p class = "position">Member</p>
+			<img src = "./images/dan.jpg" width="25" alt = "Dan Nimmer playing the piano"/>
+			<h4>Instrument: </h4> <p>Piano</p>
+			<br>
+			<h4>Hometown: </h4> <p>Milwaukee, Wisconsin</p>
+		</div>
+		<div class = "person">
+			<h3>Carlos Henriquez</h3>
+			<img src = "./images/carlos.jpg" width="25" alt = "Carlos Henriquez playing the bass"/>
+			<h4>Instrument: </h4> <p>Bass</p>
+			<br>
+			<h4>Hometown: </h4> <p>Bronx, New York</p>
+		</div>
+		<div class = "person">
+			<h3>Obed Calvaire</h3>
+			<img src = "./images/obed.jpg" width="25" alt = "Obed Calvaire playing the drums"/>
+			<h4>Instrument: </h4> <p>Drums</p>
+			<br>
+			<h4>Hometown: </h4> <p>Miami, Florida</p>
+		</div>
+	</div>
 	</main>
 
 	<footer>
