--- a/history.html
+++ b/history.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/html5reset.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/html5reset.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>History</title>
 </head>
 
@@ -32,7 +32,6 @@
 		<video controls="" poster="https://jazz.org/lwdcms/image-view.php?module=media_library&amp;module_id=13379&amp;image_name=image_featured&amp;option=width&amp;width=9999&amp;height=9999&amp;r=0&amp;g=0&amp;b=0&amp;quality=90&amp;use_original=0" width="560" height="315"><source src="https://s3.amazonaws.com/jalc.vid_conversions/qdHEcrmoVb_high.mp4" type="video/mp4">&nbsp;Your browser does not support the video tag.</video><br>
 		<button onclick="myFunction()">Transcript</button>
 		<br>
-		<p id="demo"></p><br>
 		<p id="demo1"></p><br>
 		<p id="demo2"></p><br>
 		<p id="demo3"></p><br>
