--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<main id="skip">
 		<h2>The Jazz at Lincoln Center Orchestra is an American big band and jazz orchestra led by Wynton Marsalis. The Orchestra is part of Jazz at Lincoln Center, a performing arts organization in New York City.</h2><br>
 		<h3 id = "indexh3">Announcing Jazz at Lincoln Center's 2022-23 Season</h3><br>
-		<iframe src="https://www.youtube.com/embed/uW1bSnJMryI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe src="https://www.youtube.com/embed/uW1bSnJMryI" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</main>
 	<footer>
 		<p>Brogan Kaczkofsky &copy; 2022</p>
